KL-87/refactor : change subcategory service return list
Collect를 사용하지 않고 toList()함수를 사용하여 불변객체를 사용.